syntax = "proto3";

option go_package = "duck/mongodb;mongodb";

message TimeStamp {
    int64 Seconds = 1;
    int32 Nanos = 2;
}
